<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imgPizza"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/txtPizza"
        android:src="@drawable/queijo" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imgPizza"
        android:layout_below="@+id/imgPizza" >

        <RadioButton
            android:id="@+id/btnPortuguesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPortuguesa" />

        <RadioButton
            android:id="@+id/btnCalabresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCalabresa" />

        <RadioButton
            android:id="@+id/btnQueijo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtQueijo" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/chkBorda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="24dp"
        android:text="@string/txtBorda" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/chkBorda"
        android:layout_below="@+id/chkBorda"
        android:text="@string/txtCalcular" />

</RelativeLayout>